--- a/package.json
+++ b/package.json
@@ -1,11 +1,36 @@
 {
-  "name": "generator-reactFlux",
-  "version": "0.1.0",
-  "description": "",
+  "name": "generator-reactflux",
+  "version": "0.0.3",
+  "description": "Yeoman generator",
+  "license": "MIT",
+  "main": "app/index.js",
+  "repository": "kiafathi/generator-reactflux",
+  "author": {
+    "name": "Kia Fathi",
+    "email": "kiafathi@me.com",
+    "url": "https://github.com/KiaFathi"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "files": [
+    "app"
+  ],
   "keywords": [
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.17.7"
+    "yeoman-generator": "^0.17.0",
+    "chalk": "^0.5.0",
+    "yosay": "^0.3.0"
+  },
+  "devDependencies": {
+    "mocha": "*"
+  },
+  "peerDependencies": {
+    "yo": ">=1.0.0"
   }
 }
